--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-server.port=${port:27017}
-spring.data.mongodb.uri=mongodb://localhost:27017/local
+spring.data.mongodb.uri=mongodb://localhost:27017/projectkr
